--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@jackycai/full-screen-loading-plugin",
   "author": "jackycai",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "vue-full-screen-loading-plugin",
   "main": "plugin/full-screen-loading-plugin.umd.min.js",
   "private": false,
-  "keyword": [
+  "keywords": [
     "vue",
     "npm",
-    "loading"
+    "full-screen-loading-plugin"
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
